Fix case of PRODUCT.html in redirect

--- a/index.html
+++ b/index.html
@@ -415,12 +415,12 @@
                 }
             });
 
-            // Redirect Explore Inventory button to PRODUCT.HTML
+            // Redirect Explore Inventory button to PRODUCT.html
             (function() {
                 const exploreBtn = document.getElementById('explore-inventory-btn');
                 if (exploreBtn) {
                     exploreBtn.addEventListener('click', () => {
-                        window.location.href = 'PRODUCT.HTML';
+                        window.location.href = 'PRODUCT.html';
                     });
                 }
             })();
